--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,9 @@
         <%= render 'shared/user_info' %>
       </section>
       <section>
+        <%= render 'shared/stats' %>
+      </section>
+      <section>
         <%= render 'shared/micropost_form' %>
       </section>
     </aside>
@@ -23,8 +26,7 @@
     sample application.
     </h2>
 
-    <%= link_to "Sign up now!", '#' ,
-                                class: "btn btn-lg btn-primary" %>
+    <%= link_to "Sign up now!", '#' , class: "btn btn-lg btn-primary" %>
   </div>
 
   <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
