--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
               </ul>
             </li>
           <% else %>
-            <li><%= link_to "Sign in", '#' %></li>
+            <li><%= link_to "Sign in", new_user_registration_path %></li>
           <% end %>
         </ul>
       </nav>
